compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__redundant_let_assert_on_custom_type.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1565
expression: "\npub record Wibble {\n    Wibble(Int, Bool)\n}\n\npub fn main() {\n  let assert Wibble(_, bool) = Wibble(1, True)\n  bool\n}\n"
---
----- SOURCE CODE

pub record Wibble {
    Wibble(Int, Bool)
}

pub fn main() {
  let assert Wibble(_, bool) = Wibble(1, True)
  bool
}


----- WARNING
warning: Redundant assertion
  ┌─ /src/warning/wrn.rakun:7:7
  │
7 │   let assert Wibble(_, bool) = Wibble(1, True)
  │       ^^^^^^ You can remove this

This assertion is redundant since the pattern covers all possibilities.
