compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__todo_used_as_function_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n          todo(1)\n        }"
---
----- SOURCE CODE
pub fn main() {
          todo(1)
        }

----- WARNING
warning: Todo found
  ┌─ /src/warning/wrn.rakun:2:11
  │
2 │           todo(1)
  │           ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.

Hint: I think its type is `fn(Int) -> a`.


warning: Todo used as a function
  ┌─ /src/warning/wrn.rakun:2:16
  │
2 │           todo(1)
  │                ^

`todo` is not a function and will crash before it can do anything with
this argument.

Hint: if you want to display an error message you should write
`todo as "my error message"`
See: https://tour.rakun.run/advanced-features/todo/
