compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_code_after_case_subject_panics_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn main(a, b) {\n            case a, b, panic {\n                _, _, _ -> \"no warning here!\"\n            }\n            \"warning here!\"\n        }\n        "
---
----- SOURCE CODE

        pub fn main(a, b) {
            case a, b, panic {
                _, _, _ -> "no warning here!"
            }
            "warning here!"
        }
        

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:6:13
  │
6 │             "warning here!"
  │             ^^^^^^^^^^^^^^^

This code is unreachable because it comes after a `panic`.
