compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_code_for_panic_as_first_pipeline_item.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            panic |> wibble\n        }\n        "
---
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:4:22
  │
4 │             panic |> wibble
  │                      ^^^^^^

This code is unreachable because it comes after a `panic`.
